--- a/style.css
+++ b/style.css
@@ -22,17 +22,17 @@ html {
 }
 
 .pimg1{
-  background-image: url('./pics/img1.jpg');
+  background-image: url("./pics/img1.jpg");
   min-height: 100%;
 }
 
 .pimg2 {
-  background-image: url('./pics/img2.jpg');
+  background-image: url("./pics/img2.jpg");
   min-height: 600px;
 }
 
 .pimg3 {
-  background-image: url('./pics/img3.jpg');
+  background-image: url("./pics/img3.jpg");
   min-height: 600px;
 }
 
